# solutions-engineer-assessment

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 267e2361befe_merchants_transactions_events.py
app/: __init__.py  main.py
app/db/: __init__.py  base.py  database.py  models.py
tests/: conftest.py  test_health.py  test_schema.py
